2010-09-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #9224: NullViewHelper incompatible with TYPO3 4.4 (thanks to Georg Ringer)

2010-02-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Applied clean-up of backported code
	* Backported code from branch view (code from Dennis Ahrens)

2010-01-31  Dennis Ahrens  <dennis.ahrens@fh-hannover.de>
	
	* Added a CodeGeneration service
	* Refactored all ViewHelpers to use the new CodeGeneration Service
	* Added support for the usage of the ViewHelpers in FE
	* Split the StoreViewHelper into StoreViewHelper, JsonReaderViewHelper, JsonWriterViewHelper and HttpProxy to be more flexible

2010-01-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Added code for feature #6133: Supporting Views in mvc_extjs (Thanks to Dennis Ahrens)

2010-10-15  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #6025: Extend addJsFile(), addJsLibrary() and addCssFile() to allow the inclusion from other EXTs (Thanks to Dennis Ahrens)

2010-10-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #6022: Layout property for the module panel (Thanks to Dennis Ahrens)

2009-12-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.2-dev and updated dependency version of Extbase and Fluid
	* Fixed dispatch to an action from another controller (Thanks to Fabien Udriot)

2009-10-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed handling of Flash messages (to reflect changes in Core)
	* Released version 0.1.1 to TER

2009-09-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Removed deprecated code (as of PHP5.3)

2009-09-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated ActionController to reflect changes in EXT:extbase

2009-09-07  Xavier Perseguers  <typo3@perseguers.ch>

	* Released version 0.1.0 to TER