@@ -1,3 +1,7 @@
+2010-09-23  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed function menu in toolbar
+
 2010-09-14  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #9224: NullViewHelper incompatible with TYPO3 4.4 (thanks to Georg Ringer)
